--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "station-search",
+  "name": "station-seeker",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "author": "Filip Byczek",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,11 +11,11 @@
   },
   "dependencies": {
     "@vueuse/core": "^13.1.0",
-    "mixpanel-browser": "^2.64.0",
     "pinia": "^3.0.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/node": "^22.15.17",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
