--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@statsig/js-client": "^3.16.2",
+    "@statsig/session-replay": "^3.16.2",
+    "@statsig/web-analytics": "^3.16.2",
     "@vueuse/core": "^13.1.0",
     "pinia": "^3.0.2",
+    "statsig-js": "^5.1.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
